--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title>Личный сайт студента МГИМО</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="content">
@@ -20,13 +23,13 @@
             <a href="guess-2.html">Клавиатурный тренажер</a>
         </div>
 
-        <h1>Личный сайт студента МГИМО</h1>
+        <h1 style="font-family:swap;">MGIMO student's site</h1>
         <div id="center">
-            <img src="img/photo.png" alt="фотография">
+            <img src="img/Hulk_Marvel.png" alt="фотография">
 
             <div id="box_text">
                 <p>
-                    Добрый день. Меня зовут <b>Иванов Иван</b>.
+                    Добрый день. Меня зовут <b>Щипанов Алексей</b>.
                     Я - <i>начинающий программист</i>. Я совсем недавно встал на этот путь,
                     но уже успел написать свой первый сайт.
                 </p>
@@ -38,17 +41,17 @@
                 <p>
                     На этом сайте вы сможете познакомится с сайтами которые я написал:
                 </p>
-                <a href="#">Главная</a>
-                <a href="#">Тест</a>
-                <a href="#">Угадай число</a>
-                <a href="#">Клавиатурный тренажер</a>
+            <a href="index.html">Главная</a>
+                <a href="gameJS-main/index.html">Тест</a>
+                <a href="gameJS-main/index.html">Угадай число</a>
+                <a href="Trenajor-main/index.html">Клавиатурный тренажер</a>
                 <br><br>
 
             </div>
         </div>
     </div>
     <div id="footer">
-        Copyright © 2024 <a href="">Иванов Иван</a>
+        Copyright © 2024 <a href="">Щипанов Алексей</a>
     </div>
 </body>
 </html>
